fix(homepage): fix horizontal scrolling bar

--- a/src/layouts/DefaultLayout.module.scss
+++ b/src/layouts/DefaultLayout.module.scss
@@ -22,7 +22,7 @@ $footer-height: 4rem;
 }
 
 .header {
-  @apply top-0 fixed w-screen z-10 flex;
+  @apply top-0 fixed w-full z-10 flex;
   @apply bg-gray-900 bg-opacity-50;
   @apply transition ease-in-out hover:bg-opacity-75;
 
@@ -47,7 +47,7 @@ $footer-height: 4rem;
 }
 
 .headerBg {
-  @apply top-0 w-screen z-0 h-16 bg-gradient-to-b from-gray-700 to-transparent;
+  @apply top-0 w-full z-0 h-16 bg-gradient-to-b from-gray-700 to-transparent;
 }
 
 .contentHeight {
@@ -55,7 +55,7 @@ $footer-height: 4rem;
 }
 
 .footer {
-  @apply bottom-0 w-screen z-10 bg-gray-900;
+  @apply bottom-0 w-full z-10 bg-gray-900;
   @apply transition ease-in-out bg-opacity-90;
   @apply text-slate-100 text-sm font-sans font-normal;
 
